--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^1.0.3
+  emoji_picker_flutter: ^1.1.2
+  shared_preferences: ^2.0.13
+  camera: ^0.9.4+16
+  path_provider: ^2.0.9
+  path: 
+  socket_io_client: ^1.0.2
+  
+  
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  flutter_svg: ^1.0.3
-  emoji_picker_flutter: ^1.1.2
-  shared_preferences: ^2.0.13
+ 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
